@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Fix multiple user-defined headers in a single rule (Zephaniah E. Loss-Cutler-Hull, Bug #11893).
 * [jan] Use more portable procmail recipe for rejects (Bug #7520).
 * [jan] Fix configuration of &apos;forward_file&apos; parameter (Bug #11989).
 * [mms] Require non-empty subject and reason fields when creating a vacation message (crohmann@netcologne.de; Request #8376).
@@ -1186,6 +1187,7 @@
    <date>2013-01-10</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Fix multiple user-defined headers in a single rule (Zephaniah E. Loss-Cutler-Hull, Bug #11893).
 * [jan] Use more portable procmail recipe for rejects (Bug #7520).
 * [jan] Fix configuration of &apos;forward_file&apos; parameter (Bug #11989).
 * [mms] Require non-empty subject and reason fields when creating a vacation message (crohmann@netcologne.de; Request #8376).
