@@ -2,6 +2,8 @@
 v3.0.3-git
 ----------
 
+[jan] Fix multiple user-defined headers in a single rule (Zephaniah E.
+      Loss-Cutler-Hull, Bug #11893).
 [jan] Use more portable procmail recipe for rejects (Bug #7520).
 [jan] Fix configuration of 'forward_file' parameter (Bug #11989).
 [mms] Require non-empty subject and reason fields when creating a vacation
